client - fix sidebar visibility issue

--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -69,10 +69,12 @@ $tablet_width: 1200px;
 
     .navBarOpen {
       transform: translateX(0);
+      visibility: visible;
     }
 
     .navBarClose {
       transform: translateX($navBar-side-width);
+      visibility: hidden;
     }
 
     .navBarSide {
