--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@ body {
   -ms-overflow-style: none;
 }
 
-.root {
+#root {
   overflow-x: hidden;
   position: relative;
 }
